# ME-495-Quadcopter

./: CMakeLists.txt  README.md  client  client.cpp  flight_manager  flight_manager.cpp  gains.cpp  keyboard  spin  spin_motor.cpp  vive.h
